--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div class="starter-template">
             <ul>
                 <li><a href="test1/index.html">Test 1</a></li>
+                <li><a href="test2/index.html">Test 2</a></li>
             </ul>
         </div>
 
