updated with titles

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         
         <div class="starter-template">
             <ul>
-                <li><a href="test1/index.html">Test 1</a></li>
-                <li><a href="test2/index.html">Test 2</a></li>
+                <li><a href="test1/index.html">Test 1 - Indicies</a></li>
+                <li><a href="test2/index.html">Test 2 - Proportions</a></li>
             </ul>
         </div>
 
